fixed spacings

--- a/css/bewertungen.css
+++ b/css/bewertungen.css
@@ -1,12 +1,12 @@
 .bewertungen{
     padding-top: var(--section-padding-top);
     scroll-margin-top: var(--header-height);
-    padding-bottom: 150px;
+    padding-bottom: var(--section-padding-top);
 }
 
 .bewertungen .top{
     padding: 0 20%;
-    margin-bottom: 150px;
+    margin-bottom: var(--section-padding-top);
 }
 
 .bewertungen .top .small-br{
@@ -143,7 +143,6 @@
     .bewertungen .top{
         text-align: center;
         padding: 0 20px;
-        margin-bottom: 100px;
     }
     .bewertungen .gesamtwertung{
         justify-content: center;
