--- a/css/footer.css
+++ b/css/footer.css
@@ -1,15 +1,18 @@
 .footer{
     background: rgb(41, 41, 41);
     color: white;
-    padding: 50px;
+    padding-top: var(--section-padding-top);
+    padding-bottom: var(--section-padding-top);
 }
 
+/* contains the 3 spacers */
 .footer .grid-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
+/* centers the content in every spacer */
 .footer .spacer{
     display: flex;
     justify-content: center;
