--- a/css/unsereFamilie.css
+++ b/css/unsereFamilie.css
@@ -1,21 +1,22 @@
 .unsereFamilie {
-    scroll-margin-top: calc(var(--header-height) - 1px);
+    scroll-margin-top: var(--header-height);
     padding-top: var(--section-padding-top);
     padding-bottom: var(--section-padding-top);
     position: relative;
 }
 
-.unsereFamilie h2{
-    text-align: center;
-    font-size: 2.7rem;
-    margin-bottom: calc(var(--section-padding-top) + 20px) ;
-}
 
 .unsereFamilie span{
     color: var(--accent-color-alt);
     font-size: 1.4rem;
     text-align: center;
     display: block;
+}
+
+.unsereFamilie h2{
+    text-align: center;
+    font-size: 2.7rem;
+    margin-bottom: var(--section-padding-top);
 }
 
 .unsereFamilie .leitenschenke,
@@ -133,7 +134,7 @@
     }
 
     .unsereFamilie .leitenschenke{
-        margin-top: 0;
+        margin-top: 0; /* removes margin from top card */
     }
     
     .unsereFamilie .img,
@@ -155,6 +156,9 @@
 }
 
 
+
+
+/* font changes */
 @media (max-width: 720px){
     .unsereFamilie br{
         display: none;
