--- a/css/unsereGerichte.css
+++ b/css/unsereGerichte.css
@@ -1,7 +1,7 @@
 .unsereGerichte{
-    scroll-margin-top: calc(var(--header-height) - 1px);
+    scroll-margin-top: var(--header-height);
     padding-top: var(--section-padding-top);
-    padding-bottom: 100px;
+    padding-bottom: var(--section-padding-top);
     background: rgb(41, 41, 41);
     color: white;
 }
